[CHORE] add string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Search_Movie_Flow</string>
+    <string name="search_hint">검색어를 입력해주세요.</string>
+    <string name="search_keyword">검색</string>
+    <string name="recent_search">최근검색</string>
+    <string name="delete_all">전체삭제</string>
 </resources>
