--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Search_Movie_Flow</string>
     <string name="search_hint">검색어를 입력해주세요.</string>
     <string name="search_keyword">검색</string>
+    <string name="movie_title">제목</string>
+    <string name="movie_release">출시</string>
+    <string name="movie_rate">평점</string>
     <string name="recent_search">최근검색</string>
     <string name="delete_all">전체삭제</string>
 </resources>
